--- a/packages/frontend/components/label/styles.css
+++ b/packages/frontend/components/label/styles.css
@@ -2,5 +2,4 @@
   @extend %label;
 
   display: block;
-  padding-block-end: var(--space-block);
 }
